Round up output geometry

Under fractional scaling, output screens can have non-integral sizes.
Previous code uses QSizeF::toSize(), which rounds to the nearest
integer. This sometimes results in different screens sharing one pixel
at the edge, which causes BUG 464842 and BUG 477791.

Implement Output::explicitLogicalSizeInt() and
Config::logicalSizeForOutputInt to explicitly round up non-integral
sizes, and use them in calculating output geometry.

BUG: 464842
BUG: 477791


(cherry picked from commit 6f797a908360de5c9654cd6cbd1dcc170b35207c)